--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       <div class="author"></div>
     </div>
   </footer>
-  <script src="js/script.js"></script>
+  <script src="js/script.js" type="module"></script>
+  <script src="js/playList.js" type="module"></script>
 </body>
 </html>
